<resources>
    <string name="app_name">SPOTS_MOBILE2</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_activity__splash">SPOTS</string>
    <string name="greeting">Welcome to Spots!</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="splash_greeting2">The Revolutionary Parking App</string>
    <string name="spotslogo2">spotslogo2.png</string>
    <string name="tvUsername">Username</string>
    <string name="tvPassword">Password</string>
    <string name="bLogin">Login</string>
    <string name="tvRegister">Register Here</string>
    <string name="tvRegister_Name">Name</string>
    <string name="tvRegister_Age">Age</string>
    <string name="tvRegister_Username">Username</string>
    <string name="tvRegister_Password">Password</string>
    <string name="bRegister">Register</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="tvHome_searchbar">Find parking near events</string>

    <string name="hello_world">Hello world!</string>
    <string name="etSearch">Search for event…</string>
    <string name="title_activity_register_tab">RegisterTab</string>
    <string name="title_activity_register_homeowner">RegisterHomeowner</string>
    <string name="bDriverRegister">Register as Driver</string>
    <string name="bHomeownerRegister">Register as Homeowner</string>
    <string name="DriverLastName">Last Name</string>
    <string name="DriverFirstName">First Name</string>
    <string name="streetAddress">Street Address</string>
    <string name="city">City</string>
    <string name="zipCode">Zip Code</string>
    <string name="carMake">Make</string>
    <string name="carModel">Model</string>
    <string name="carLicense">License Plate</string>
    <string name="tvDriverTitle">Register as Driver</string>
    <string name="tvHomeownerTitle">Register as Homeowner</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="spotsAvailable">How many spots?</string>
    <string name="spotsCost">How much per spot?</string>
    <string name="VehicleInfo">Vehicle Information</string>
    <string name="action_search">Search</string>
    <string name="HomeTitle">Home</string>
    <string name="Home">Home</string>
    <string name="logout">Logout</string>
    <string name="mySpots">My Spots</string>
    <string name="splash_logout2">We will see you soon!</string>
    <string name="splash_logout">Thanks for choosing Spots!</string>
    <string-array name="states">
        <item>AL</item>
        <item>AK</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
        <item>DC</item>
    </string-array>
    <string name="title_activity_logout">Logout</string>
    <string name="title_activity_search">Search</string>
    <string name="searchBar">Search city for spots...</string>
</resources>
