<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/scrollView2"
    android:layout_gravity="center_horizontal"
    android:fillViewport="true">

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="wrap_content"
    android:background="#28B8D0"
    android:weightSum="1">

    <ImageView
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:id="@+id/imageView5"
        android:src="@drawable/spotslogo2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tvHomeownerTitle"
        android:id="@+id/textView5"
        android:layout_gravity="center_horizontal" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <EditText
        android:id="@+id/editText3"
        android:layout_width="185dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:hint="@string/DriverFirstName"
        android:inputType="text" />

    <EditText
                android:id="@+id/editText4"
                android:layout_width="0dp"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"
                android:hint="@string/DriverLastName"
                android:inputType="text"
                android:layout_weight="1" />
</LinearLayout>

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:hint="@string/tvUsername"
        android:inputType="text" />

    <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:hint="@string/prompt_password"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress" />

    <EditText
                android:id="@+id/editText6"
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"
                android:hint="@string/streetAddress"
                android:inputType="text" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp">
    <EditText
        android:id="@+id/editText7"
        android:layout_width="0dp"
        android:layout_marginBottom="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/city"
        android:inputType="text"
        android:layout_weight="395.63" />
    <Spinner
        android:layout_width="73dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinner2"
        android:layout_gravity="top" />
    </LinearLayout>
    <EditText
                android:id="@+id/editText8"
                android:layout_width="177dp"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"
                android:hint="@string/zipCode"
                android:inputType="number"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/VehicleInfo"
        android:id="@+id/textView7"
        android:layout_gravity="center_horizontal" />

    <EditText
                android:id="@+id/editText9"
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"
                android:hint="@string/carMake"
                android:inputType="text" />

            <EditText
                android:id="@+id/editText10"
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"
                android:hint="@string/carModel"
                android:inputType="text" />

            <EditText
                android:id="@+id/editText11"
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"
                android:hint="@string/carLicense"
                android:inputType="text" />

    <EditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:hint="@string/phoneNumber"
        android:inputType="phone"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <EditText
        android:id="@+id/etSpotsAvailable"
        android:layout_width="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:hint="@string/spotsAvailable"
        android:inputType="number"/>
    <EditText
        android:id="@+id/etSpotCost"
        android:layout_width="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:hint="@string/spotsCost"
        android:inputType="numberDecimal" />
    </LinearLayout>
    <Button
        android:id="@+id/bRegister2"
        android:text="@string/bRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>
